add google places api to autocomplete address on listings

--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -2,13 +2,25 @@
 <%= render partial: "shared/errors" %>
 <form action="/host/listings" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <label>Title<br>
+  <label for="title">Title<br>
     <input type="text" id="title" name="listing[title]" value="<%= @listing.title %>">
   </label>
-  <label>About<br>
+  <label for="about">About<br>
     <textarea id="about" name="listing[about]" value="<%= @listing.about %>"></textarea>
   </label>
-  <label>How many people maximum can stay?<br>
+  <div data-controller="address" data-action="map-loaded@window->address#initGoogle">
+    <label for="address">Address</label>
+    <input type="text" id="address" autocomplete="off" data-address-target="input">
+    <input type="hidden" name="listing[address_line1]" data-address-target="address_line1">
+    <input type="hidden" name="listing[address_line2]" data-address-target="address_line2">
+    <input type="hidden" name="listing[city]" data-address-target="city">
+    <input type="hidden" name="listing[state]" data-address-target="state">
+    <input type="hidden" name="listing[postal_code]" data-address-target="postal_code">
+    <input type="hidden" name="listing[country]" data-address-target="country">
+    <input type="hidden" name="listing[lat]" data-address-target="lat">
+    <input type="hidden" name="listing[lng]" data-address-target="lng">
+  </div>
+  <label for="max_guests">How many people maximum can stay?<br>
     <input type="number" name="listing[max_guests]" id="max_guests" value="<%= @listing.max_guests %>" min="1" max="100" step="1">
   </label>
   <input type="submit" value="Create listing">
