--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -1,18 +1,28 @@
-<h1>List your property</h1>
+<h1 class="text-3xl">List your property</h1>
 <%= render partial: "shared/errors" %>
-<form action="/host/listings" method="post">
+<form action="/host/listings" method="post" class="space-y-8 divide-y divide-gray-200">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <label for="title">Title<br>
-    <input type="text" id="title" name="listing[title]" value="<%= @listing.title %>">
-  </label>
-  <label for="about">About<br>
-    <textarea id="about" name="listing[about]" value="<%= @listing.about %>"></textarea>
-  </label>
-  <div data-controller="address" data-action="map-loaded@window->address#initGoogle">
-    <label for="address">Address</label>
-    <input type="text" id="address" autocomplete="off" data-address-target="input">
-    <input type="hidden" name="listing[address_line1]" data-address-target="address_line1">
-    <input type="hidden" name="listing[address_line2]" data-address-target="address_line2">
+  <div class="sm:col-span-6">
+    <label for="title" class="block text-sm font-medium text-gray-700">
+      Title
+    </label>
+    <div class="mt-1">
+      <input type="text" name="listing[title]" id="title" value="<%= @listing.title %>" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+    </div>
+  </div>
+  <div class="sm:col-span-6">
+    <label for="about" class="block text-sm font-medium text-gray-700">
+      About
+    </label>
+    <textarea id="about" name="listing[about]" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"><%= @listing.about %></textarea>
+  </div>
+  <div data-controller="address" data-action="map-loaded@window->address#initGoogle" class="sm:col-span-6">
+    <label for="address" class="block text-sm font-medium text-gray-700">
+      Address
+    </label>
+    <input type="text" id="address" data-address-target="input" autocomplete="off" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+    <input type="hidden" name="listing[address_line1]" data-address-target="line1">
+    <input type="hidden" name="listing[address_line2]" data-address-target="line2">
     <input type="hidden" name="listing[city]" data-address-target="city">
     <input type="hidden" name="listing[state]" data-address-target="state">
     <input type="hidden" name="listing[postal_code]" data-address-target="postal_code">
@@ -20,8 +30,11 @@
     <input type="hidden" name="listing[lat]" data-address-target="lat">
     <input type="hidden" name="listing[lng]" data-address-target="lng">
   </div>
-  <label for="max_guests">How many people maximum can stay?<br>
-    <input type="number" name="listing[max_guests]" id="max_guests" value="<%= @listing.max_guests %>" min="1" max="100" step="1">
-  </label>
-  <input type="submit" value="Create listing">
+  <div class="sm:col-span-6">
+    <label for="max_guests" class="block text-sm font-medium text-gray-700 my-4">
+      How many people maxium can stay?
+    </label>
+    <input type="number" id="max_guests" name="listing[max_guests]" value="<%= @listing.max_guests %>" min="1" max="100" step="1" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+  </div>
+  <input type="submit" value="Create listing" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
 </form>
