--- a/app/views/host/listings/edit.html.erb
+++ b/app/views/host/listings/edit.html.erb
@@ -9,5 +9,11 @@
   <textarea id="about" name="listing[about]"><%= @listing.about %></textarea>
   <label>How many people maximum can stay?</label>
   <input type="number" name="listing[max_guests]" id="max_guests" value="<%= @listing.max_guests %>" min="1" max="100" step="1">
+  <label for="status">Status</label>
+  <select name="listing[status]">
+    <% Listing.statuses.keys.each do |status| %>
+      <option <%= 'selected' if @listing.status == status %>><%= status  %></option>
+    <% end %>
+  </select>
   <input type="submit" value="Update listing">
 </form>
