--- a/app/views/host/rooms/index.html.erb
+++ b/app/views/host/rooms/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-2xl font-bold mb-4">Rooms</h1>
 <%= link_to "Back to #{@listing.title}", host_listing_path(@listing) %>
-<ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3">
+<ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 mb-4">
   <% @rooms.each do |room| %>
     <li class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200">
       <div class="w-full flex items-center justify-between p-6 space-x-6">
@@ -20,4 +20,4 @@
     </li>
   <% end %>
 </ul>
-# <%= render partial: 'form', locals: { listing: @listing } %>
+<%= render partial: 'form', locals: { listing: @listing } %>
