--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,6 +6,11 @@
 <p>
   <%= @listing.max_guests %>
 </p>
+<% if @listing.photos.exists? %>
+  <% @listing.photos.each do |photo| %>
+    <%= image_tag photo.photo.variant(resize_to_limit: [100, 100]) %>
+  <% end %>
+<% end %>
 <ul>
   <% @listing.rooms.each do |room|  %>
     <li><%= room.room_type %> beds: <%= room.beds %></li>
