--- a/app/views/host/listings/edit.html.erb
+++ b/app/views/host/listings/edit.html.erb
@@ -9,6 +9,10 @@
   <textarea id="about" name="listing[about]"><%= @listing.about %></textarea>
   <label>How many people maximum can stay?</label>
   <input type="number" name="listing[max_guests]" id="max_guests" value="<%= @listing.max_guests %>" min="1" max="100" step="1">
+  <label for="nightly_price">Nightly Price</label>
+  <input type="number" id="nightly_price" name="listing[nightly_price]" value="<%= @listing.nightly_price %>" min="1" step="1">
+  <label for="cleaning_fee">Cleaning Fee</label>
+  <input type="number" id="cleaning_fee" name="listing[cleaning_fee]" value="<%= @listing.cleaning_fee %>" min="1" step="1">
   <label for="status">Status</label>
   <select name="listing[status]">
     <% Listing.statuses.keys.each do |status| %>
