--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,11 @@
 <h1><%= @listing.title %></h1>
+<%= render partial: "booking_form", locals: { listing: @listing } %>
+<div>
+  Per night <%= number_to_currency(@listing.nightly_price / 100, precision: 0) %>
+</div>
+<div>
+  Cleaning fee <%= number_to_currency(@listing.cleaning_fee / 100, precision: 0) %>
+</div>
 <%= @listing.city %>, <%= @listing.state %>
 <p>
   <%= @listing.about %>
